# Amar-Passport

./: .env.example  .gitignore  README.md  pyproject.toml
data/: passport_rules_2026.json
examples/: adult_private.json  minor_inconsistent.json
src/amar_passport/: __init__.py  __main__.py  cli.py  crew.py  models.py  report.py  repository.py  rules.py  web.py
src/amar_passport/static/: index.html
tests/: test_report.py  test_repository.py  test_rules.py
